add two impl for dubbo feign invoke

--- a/hybrid-dubbo-service/src/main/resources/application.properties
+++ b/hybrid-dubbo-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # 应用名称
 spring.application.name=hybrid-dubbo-demo
-server.port=8112
+#server.port=8112
+spring.cloud.nacos.config.enable=false
 
 ## Actuator Web 访问端口
 #management.endpoint.port=10086
@@ -8,9 +9,12 @@ server.port=8112
 
 # 指定 Dubbo 服务实现类的扫描基准包
 dubbo.scan.base-packages=com.mytijian.hybrid.api
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=-1
 dubbo.registry.address=spring-cloud://localhost
+dubbo.protocols.dubbo.name=dubbo
+dubbo.protocols.dubbo.port=20880
+dubbo.protocols.rest.name=rest
+dubbo.protocols.rest.port=9090
+dubbo.protocols.rest.server=netty
 
 # Nacos帮助文档: https://nacos.io/zh-cn/docs/concepts.html
 # Nacos认证信息
