--- a/hybrid-dubbo-springrest-service/src/main/resources/application.properties
+++ b/hybrid-dubbo-springrest-service/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 # 应用名称
-spring.application.name=hybrid-demo
-server.port=8111
+spring.application.name=hybrid-dubbo-demo
+server.port=8112
+spring.cloud.nacos.config.enable=false
 
-# Actuator Web 访问端口
+## Actuator Web 访问端口
 #management.endpoint.port=10086
 #management.endpoint.health.show-details=always
 
-dubbo.protocols.dubbo.port=-1
-dubbo.consumer.check=false
+# 指定 Dubbo 服务实现类的扫描基准包
+dubbo.scan.base-packages=com.mytijian.hybrid.api
+dubbo.registry.address=spring-cloud://localhost
+dubbo.protocols.dubbo.name=dubbo
+dubbo.protocols.dubbo.port=20880
 
 # Nacos帮助文档: https://nacos.io/zh-cn/docs/concepts.html
 # Nacos认证信息
