change maven dependncy

--- a/hybrid-dubbo-service/src/main/resources/application.properties
+++ b/hybrid-dubbo-service/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 # 应用名称
 spring.application.name=hybrid-dubbo-demo
-#server.port=8112
+server.port=8112
 spring.cloud.nacos.config.enable=false
 
 ## Actuator Web 访问端口
-#management.endpoint.port=10086
-#management.endpoint.health.show-details=always
+management.endpoint.port=10086
+management.endpoint.health.show-details=always
 
 # 指定 Dubbo 服务实现类的扫描基准包
+#dubbo.enabled=false
 dubbo.scan.base-packages=com.mytijian.hybrid.api
 dubbo.registry.address=spring-cloud://localhost
 dubbo.protocols.dubbo.name=dubbo
