--- a/hybrid-dubbo-springrest-service/src/main/resources/application.properties
+++ b/hybrid-dubbo-springrest-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.cloud.nacos.config.enable=false
 
 # 指定 Dubbo 服务实现类的扫描基准包
 dubbo.scan.base-packages=com.mytijian.hybrid.api
-dubbo.registry.address=spring-cloud://localhost
+dubbo.registry.address=spring-cloud://ip138.com:80
 dubbo.protocols.dubbo.name=dubbo
 dubbo.protocols.dubbo.port=20880
 
@@ -21,5 +21,6 @@ spring.cloud.nacos.discovery.password=nacos
 spring.cloud.nacos.discovery.server-addr=192.168.5.104:8848
 # 注册到 nacos 的指定 namespace，默认为 public
 spring.cloud.nacos.discovery.namespace=public
+spring.cloud.nacos.discovery.group=dubbo
 
 
