--- a/hybrid-service/pom.xml
+++ b/hybrid-service/pom.xml
@@ -14,14 +14,12 @@
     </parent>
     <description>Demo project for Spring Boot</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
-    </properties>
-
     <dependencies>
+        <dependency>
+            <artifactId>user-api</artifactId>
+            <groupId>com.mytijian.uic</groupId>
+            <version>1.52.13</version>
+        </dependency>
         <dependency>
             <groupId>com.mytijian</groupId>
             <artifactId>hybrid-dubbo-api</artifactId>
@@ -53,10 +51,9 @@
             <artifactId>spring-cloud-function-context</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
